--- a/index.html
+++ b/index.html
@@ -814,6 +814,228 @@
     </section>
     <!-- End Sponsors Section -->
 
+      <!-- Footer -->
+      <section
+      class="mt-5 mb-5 mb-lg-6 pt-5 pb-6 px-0 bg-info col-11 col-sm-10 container-xxl"
+    >
+      <!-- Logo && Social Media -->
+      <div class="row pt-5 mx-auto col-10 d-block d-lg-flex">
+        <!-- Logo -->
+        <div class="text-start col-10 col-sm-6 p-0 mx-auto">
+          <img src="assets/logo-white.png" alt="..." class="img-fluid" />
+        </div>
+        <!-- End Logo -->
+        <!-- Social Media links -->
+        <ul
+          class="social nav justify-content-center justify-content-lg-end col-12 col-lg-6 p-0 mt-5 mt-lg-0"
+        >
+          <!-- Linkedin link -->
+          <li class="nav-item">
+            <a class="nav-link px-3" href=""
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="15.573"
+                height="15.573"
+                viewBox="0 0 15.573 15.573"
+              >
+                <path
+                  id="linkedin"
+                  d="M3.486,15.583H.257V5.186H3.486ZM1.87,3.767A1.879,1.879,0,1,1,3.74,1.88,1.886,1.886,0,0,1,1.87,3.767Zm13.7,11.815H12.348V10.522c0-1.206-.024-2.753-1.679-2.753-1.679,0-1.936,1.311-1.936,2.666v5.148H5.508V5.186H8.6V6.6H8.65A3.393,3.393,0,0,1,11.7,4.925c3.268,0,3.868,2.152,3.868,4.947v5.711Z"
+                  transform="translate(0 -0.01)"
+                  fill="#fff"
+                />
+              </svg>
+            </a>
+          </li>
+          <!-- End Linkedin link-->
+
+          <!-- Twitter link-->
+          <li class="nav-item">
+            <a class="nav-link px-3" href="."
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="19.174"
+                height="15.573"
+                viewBox="0 0 19.174 15.573"
+              >
+                <path
+                  id="twitter"
+                  d="M17.2,51.963c.012.17.012.341.012.511A11.1,11.1,0,0,1,6.034,63.655,11.105,11.105,0,0,1,0,61.891a8.13,8.13,0,0,0,.949.049A7.87,7.87,0,0,0,5.828,60.26a3.937,3.937,0,0,1-3.674-2.725A4.955,4.955,0,0,0,2.9,57.6a4.156,4.156,0,0,0,1.034-.134A3.93,3.93,0,0,1,.779,53.606v-.049a3.958,3.958,0,0,0,1.776.5A3.936,3.936,0,0,1,1.338,48.8a11.17,11.17,0,0,0,8.1,4.112,4.436,4.436,0,0,1-.1-.9,3.933,3.933,0,0,1,6.8-2.689,7.737,7.737,0,0,0,2.494-.949,3.919,3.919,0,0,1-1.728,2.166,7.878,7.878,0,0,0,2.263-.608A8.447,8.447,0,0,1,17.2,51.963Z"
+                  transform="translate(0 -48.082)"
+                  fill="#fff"
+                />
+              </svg>
+            </a>
+          </li>
+          <!-- End Twitter link -->
+
+          <!-- Instagram link -->
+          <li class="nav-item">
+            <a class="nav-link px-3" href="."
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="15.576"
+                height="15.573"
+                viewBox="0 0 15.576 15.573"
+              >
+                <path
+                  id="instagram"
+                  d="M7.715,35.619a3.993,3.993,0,1,0,3.993,3.993A3.986,3.986,0,0,0,7.715,35.619Zm0,6.588a2.6,2.6,0,1,1,2.6-2.6,2.6,2.6,0,0,1-2.6,2.6ZM12.8,35.455a.931.931,0,1,1-.931-.931A.929.929,0,0,1,12.8,35.455Zm2.644.945a4.609,4.609,0,0,0-1.258-3.263,4.639,4.639,0,0,0-3.263-1.258c-1.286-.073-5.139-.073-6.425,0a4.632,4.632,0,0,0-3.263,1.254A4.624,4.624,0,0,0-.02,36.4c-.073,1.286-.073,5.139,0,6.425a4.609,4.609,0,0,0,1.258,3.263A4.645,4.645,0,0,0,4.5,47.343c1.286.073,5.139.073,6.425,0a4.609,4.609,0,0,0,3.263-1.258,4.639,4.639,0,0,0,1.258-3.263C15.52,41.537,15.52,37.686,15.447,36.4Zm-1.661,7.8a2.628,2.628,0,0,1-1.48,1.48,17.162,17.162,0,0,1-4.59.313,17.3,17.3,0,0,1-4.59-.313,2.628,2.628,0,0,1-1.48-1.48,17.162,17.162,0,0,1-.313-4.59,17.3,17.3,0,0,1,.313-4.59,2.628,2.628,0,0,1,1.48-1.48,17.162,17.162,0,0,1,4.59-.313,17.3,17.3,0,0,1,4.59.313,2.628,2.628,0,0,1,1.48,1.48,17.163,17.163,0,0,1,.313,4.59A17.153,17.153,0,0,1,13.786,44.2Z"
+                  transform="translate(0.075 -31.825)"
+                  fill="#fff"
+                />
+              </svg>
+            </a>
+          </li>
+          <!-- End Instagram link -->
+          <!-- Facebook link -->
+          <li class="nav-item">
+            <a class="nav-link ps-3 pe-0" href=""
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="19.174"
+                height="15.573"
+                viewBox="0 0 19.174 15.573"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="8.341"
+                  height="15.573"
+                  viewBox="0 0 8.341 15.573"
+                >
+                  <path
+                    id="facebook"
+                    d="M30.684,8.76l.433-2.818h-2.7V4.113A1.409,1.409,0,0,1,30,2.59h1.229V.19A14.992,14.992,0,0,0,29.048,0a3.441,3.441,0,0,0-3.683,3.793V5.941H22.89V8.76h2.476v6.813h3.047V8.76Z"
+                    transform="translate(-22.89)"
+                    fill="#fff"
+                  />
+                </svg>
+              </svg>
+            </a>
+          </li>
+          <!-- End Facebook link -->
+        </ul>
+        <!-- End Social Media Links -->
+
+        <!-- Hr Line -->
+        <hr class="mt-5 opacity-100" />
+      </div>
+      <!-- End Logo && Social Media -->
+
+      <!-- Info && Contact -->
+      <div
+        class="row mx-auto mt-5 col-10 d-flex flex-column align-items-center align-items-lg-baseline flex-lg-row"
+      >
+        <!-- Col-1 About -->
+        <div class="col-10 col-lg-4 mx-auto text-center text-lg-start">
+          <h4 class="text-primary">About World Barista cup</h4>
+          <p class="text-success fw-semibold">
+            The vision within the World Barista Cup
+          </p>
+          <p class="text-primary fs-6 lh-base fw-lighter">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eaque
+            aut corporis vero! Ducimus perferendis maxime perspiciatis corporis
+            cum illo eveniet, explicabo eaque nobis totam iste debitis voluptate
+            natus? Ratione eligendi doloremque repellat aperiam accusamus,
+            laudantium enim molestias non illo!
+          </p>
+        </div>
+        <!-- End Col-1 About -->
+
+        <!-- Col-2 Instagram Feed -->
+        <div
+          class="instagram-feed col-10 col-md-7 col-lg-4 col-xxl-3 p-0 mt-5 m-0 px-lg-3 ms-lg-auto"
+        >
+          <!-- Header-Instagram Feed -->
+          <h4 class="text-primary text-center text-lg-start">Instagram feed</h4>
+
+          <!-- Images-Instagram Feed (9)-->
+          <div class="row gy-2 gx-0 mx-0 mt-3 mt-lg-2 g-3 row-cols-3">
+            <div class="text-center ps-0 mt-lg-3">
+              <img
+                src="assets/images/instagram-feed/instagram-image-1.png"
+                class="w-100 instagram-img"
+                alt="Instagram icon."
+              />
+            </div>
+            <div class="text-center ps-0 mt-lg-3">
+              <img
+                src="assets/images/instagram-feed/instagram-image-2.png"
+                alt="Instagram icon."
+                class="w-100 instagram-img"
+              />
+            </div>
+            <div class="text-center ps-0 mt-lg-3">
+              <img src="assets/images/instagram-feed/instagram-image-3.png"
+              class="w-100 instagram-img" class" alt="Instagram icon." />
+            </div>
+            <div class="text-center ps-0 mt-lg-3">
+              <img
+                src="assets/images/instagram-feed/instagram-image-4.png"
+                alt="Instagram icon."
+                class="w-100 instagram-img"
+              />
+            </div>
+            <div class="text-center ps-0 mt-lg-3">
+              <img
+                src="assets/images/instagram-feed/instagram-image-5.png"
+                class="w-100 instagram-img"
+                alt="Instagram icon."
+              />
+            </div>
+            <div class="text-center ps-0 mt-lg-3">
+              <img
+                src="assets/images/instagram-feed/instagram-image-6.png"
+                class="w-100 instagram-img"
+                alt="Instagram icon."
+              />
+            </div>
+            <div class="text-center ps-0 mt-lg-3">
+              <img
+                src="assets/images/instagram-feed/instagram-image-7.png"
+                class="w-100 instagram-img"
+                alt="Instagram icon."
+              />
+            </div>
+            <div class="text-center ps-0 mt-lg-3">
+              <img
+                src="assets/images/instagram-feed/instagram-image-8.png"
+                class="w-100 instagram-img"
+                alt="Instagram icon."
+              />
+            </div>
+            <div class="text-center ps-0 mt-lg-3">
+              <img
+                src="assets/images/instagram-feed/instagram-image-9.png"
+                class="w-100 instagram-img"
+                alt="Instagram icon."
+              />
+            </div>
+          </div>
+          <!-- End Images-Instagram Feed(9) -->
+        </div>
+        <!-- End Col-2 Instagram Feed -->
+
+        <!-- Col-3 Contact -->
+        <div
+          class="col-10 col-lg-3 m-0 mx-auto ms-lg-auto text-center text-lg-start"
+        >
+          <h4 class="text-primary mt-5 mt-lg-0">Contact</h4>
+          <h5 class="text-primary mt-2 mb-1 fw-lighter mt-3 mt-lg-0">
+            World Barista Cup
+          </h5>
+          <p class="text-success mb-1">Amagertov 13</p>
+          <p class="text-success mb-1">1160 Copenhagen K</p>
+          <p class="text-success mb-1">+45 33 12 04 28</p>
+          <p class="text-success mb-1">CVR: 11427693</p>
+          <p class="text-success mb-1">Email: info@worldbaristacup.com</p>
+        </div>
+        <!-- End Col-3 Contact -->
+      </div>
+      <!-- End Info && Contact -->
+    </section>
+    <!-- End Footer -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
